<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TakeFoodDetailsActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="293dp"
        android:layout_height="82dp"
        android:text="Please Enter Details of your Order:"
        android:textAlignment="viewStart"
        android:textColor="@color/purple_700"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editOrderID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="208dp"
        android:layout_height="34dp"
        android:text="How do you want to share?"
        android:textColor="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editOrderID"
        app:layout_constraintVertical_bias="0.061" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="281dp"
        android:layout_height="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/fullMealRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Give Full Meal" />

        <RadioButton
            android:id="@+id/shareMealRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Share your food" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="160dp"
        android:layout_height="29dp"
        android:text="What food do you have?"
        android:textColor="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup1"
        app:layout_constraintVertical_bias="0.063" />

    <EditText
        android:id="@+id/editOrderID"
        android:layout_width="285dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="Please enter your order ID"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="295dp"
        android:layout_height="192dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.129">

        <RadioButton
            android:id="@+id/veg5RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/veg_5_pcs" />

        <RadioButton
            android:id="@+id/veg8RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/veg_8_pcs" />

        <RadioButton
            android:id="@+id/nonveg5RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/non_veg_5_pcs" />

        <RadioButton
            android:id="@+id/nonveg8RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/non_veg_8_pcs" />
    </RadioGroup>

    <Button
        android:id="@+id/shareButton"
        android:layout_width="127dp"
        android:layout_height="47dp"
        android:text="Share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />
</androidx.constraintlayout.widget.ConstraintLayout>